--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@nx-personal-blog/articles": ["libs/content/articles/src/index.ts"],
+      "@nx-personal-blog/web-articles": ["libs/web/articles/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
