--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prismjs": "^1.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
@@ -31,8 +32,10 @@
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
