--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@markdoc/markdoc": "^0.4.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.453.0",
     "prismjs": "^1.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.27.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "tailwind-merge": "^2.5.4",
     "vite-plugin-prismjs": "^0.0.11"
   },
   "devDependencies": {
@@ -37,6 +46,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
