feat: add storybook configuration

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@nx-personal-blog/storybook-host": [
+        "libs/web/storybook-host/src/index.ts"
+      ],
       "@nx-personal-blog/web-articles": ["libs/web/articles/src/index.ts"]
     }
   },
