--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/forms": "^0.5.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
@@ -22,6 +23,8 @@
     "vite-plugin-prismjs": "^0.0.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nx/cypress": "20.0.4",
     "@nx/devkit": "20.0.4",
@@ -31,10 +34,19 @@
     "@nx/js": "20.0.4",
     "@nx/playwright": "20.0.4",
     "@nx/react": "20.0.4",
+    "@nx/storybook": "^20.0.4",
     "@nx/vite": "20.0.4",
     "@nx/web": "20.0.4",
     "@nx/workspace": "20.0.4",
     "@playwright/test": "^1.36.0",
+    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/addon-interactions": "^8.2.8",
+    "@storybook/core-server": "^8.2.8",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react": "^8.3.6",
+    "@storybook/react-vite": "^8.3.6",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -48,6 +60,7 @@
     "@types/react-helmet": "^6.1.11",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
@@ -64,6 +77,7 @@
     "nx": "20.0.4",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "storybook": "^8.2.8",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
