--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@markdoc/markdoc": "^0.4.0",
+    "@pulumi/pulumi": "^3.137.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -53,7 +54,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
+    "@types/node": "^18.16.9",
     "@types/prismjs": "^1.26.5",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
@@ -78,6 +79,7 @@
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "storybook": "^8.2.8",
+    "swc-loader": "0.1.15",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
