--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "dependencies": {
     "@markdoc/markdoc": "^0.4.0",
+    "@pulumi/aws": "^6.56.1",
     "@pulumi/pulumi": "^3.137.0",
+    "@pulumi/synced-folder": "^0.11.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
