--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,11 @@ Thumbs.db
 .nx/cache
 .nx/workspace-data
 
-**/vite.config.{js,ts,mjs,mts,cjs,cts}.timestamp*
+
 
 # Local files
 active.md
 .aider*
+
+vite.config.*.timestamp*
+vitest.config.*.timestamp*
