--- a/package.json
+++ b/package.json
@@ -29,32 +29,32 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
-    "@nx/cypress": "20.0.4",
-    "@nx/devkit": "20.0.4",
-    "@nx/eslint": "20.0.4",
-    "@nx/eslint-plugin": "20.0.4",
-    "@nx/jest": "20.0.4",
-    "@nx/js": "20.0.4",
-    "@nx/playwright": "20.0.4",
-    "@nx/react": "20.0.4",
-    "@nx/storybook": "^20.0.4",
-    "@nx/vite": "20.0.4",
-    "@nx/web": "20.0.4",
-    "@nx/workspace": "20.0.4",
+    "@nx/cypress": "20.8.0",
+    "@nx/devkit": "20.8.0",
+    "@nx/eslint": "20.8.0",
+    "@nx/eslint-plugin": "20.8.0",
+    "@nx/jest": "20.8.0",
+    "@nx/js": "20.8.0",
+    "@nx/playwright": "20.8.0",
+    "@nx/react": "20.8.0",
+    "@nx/storybook": "20.8.0",
+    "@nx/vite": "20.8.0",
+    "@nx/web": "20.8.0",
+    "@nx/workspace": "20.8.0",
     "@playwright/test": "^1.36.0",
-    "@storybook/addon-essentials": "^8.2.8",
-    "@storybook/addon-interactions": "^8.2.8",
-    "@storybook/core-server": "^8.2.8",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-interactions": "8.6.12",
+    "@storybook/core-server": "8.6.12",
     "@storybook/jest": "^0.2.3",
-    "@storybook/react": "^8.3.6",
-    "@storybook/react-vite": "^8.3.6",
-    "@storybook/test-runner": "^0.13.0",
+    "@storybook/react": "8.6.12",
+    "@storybook/react-vite": "8.6.12",
+    "@storybook/test-runner": "0.22.0",
     "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.3.12",
+    "@swc/cli": "0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@testing-library/react": "15.0.6",
+    "@testing-library/react": "16.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.16.9",
     "@types/prismjs": "^1.26.5",
@@ -68,16 +68,17 @@
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.1",
+    "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "nx": "20.0.4",
+    "nx": "20.8.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "storybook": "^8.2.8",
@@ -86,9 +87,9 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.0",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.30.1",
+    "vite": "6.3.2",
     "vitest": "^1.3.1"
   }
 }
