--- a/libs/web/home/tsconfig.json
+++ b/libs/web/home/tsconfig.json
@@ -1,14 +1,16 @@
 {
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "allowJs": false,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true
-  },
   "files": [],
   "include": [],
   "references": [
+    {
+      "path": "../shared/ui"
+    },
+    {
+      "path": "../navigation"
+    },
+    {
+      "path": "../articles"
+    },
     {
       "path": "./tsconfig.lib.json"
     },
