--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@nx/eslint": "20.8.0",
     "@nx/eslint-plugin": "20.8.0",
     "@nx/jest": "20.8.0",
-    "@nx/js": "20.8.0",
+    "@nx/js": "^20.8.0",
     "@nx/playwright": "20.8.0",
     "@nx/react": "20.8.0",
     "@nx/storybook": "20.8.0",
@@ -91,5 +91,10 @@
     "typescript-eslint": "8.30.1",
     "vite": "6.3.2",
     "vitest": "^1.3.1"
-  }
+  },
+  "workspaces": [
+    "apps/*",
+    "libs/web/*",
+    "libs/web/shared/*"
+  ]
 }
