--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "6.29.0",
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^2.5.4",
     "vite-plugin-prismjs": "^0.0.11"
@@ -54,9 +54,10 @@
     "@swc/cli": "0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^18.16.9",
+    "@types/node": "^20.0.0",
     "@types/prismjs": "^1.26.5",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
@@ -95,6 +96,7 @@
   "workspaces": [
     "apps/*",
     "libs/web/*",
-    "libs/web/shared/*"
+    "libs/web/shared/*",
+    "personal-blog-ssr"
   ]
 }
