--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-router/node": "^7.2.0",
+    "@react-router/serve": "^7.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "isbot": "^4.4.0",
     "lucide-react": "^0.453.0",
     "prismjs": "^1.29.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-helmet": "^6.1.0",
+    "react-router": "^7.2.0",
     "react-router-dom": "6.29.0",
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^2.5.4",
@@ -42,6 +46,7 @@
     "@nx/web": "20.8.0",
     "@nx/workspace": "20.8.0",
     "@playwright/test": "^1.36.0",
+    "@react-router/dev": "^7.2.0",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-interactions": "8.6.12",
     "@storybook/core-server": "8.6.12",
@@ -59,11 +64,11 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
     "@types/prismjs": "^1.26.5",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@types/react-helmet": "^6.1.11",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react": "^4.4.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
