--- a/apps/personal-blog-ssr/tsconfig.spec.json
+++ b/apps/personal-blog-ssr/tsconfig.spec.json
@@ -14,8 +14,9 @@
     "jsx": "react-jsx"
   },
   "include": [
+    "react-router.config.ts",
     "vite.config.ts",
-    "vite.config.mts",
+    "vite.config.ts",
     "vitest.config.ts",
     "vitest.config.mts",
     "src/**/*.test.ts",
