--- a/libs/web/shared/ui/package.json
+++ b/libs/web/shared/ui/package.json
@@ -10,5 +10,8 @@
       "default": "./src/index.ts"
     },
     "./package.json": "./package.json"
+  },
+  "nx": {
+    "sourceRoot": "libs/web/shared/ui/src"
   }
 }
