update tsconfig project references

--- a/apps/personal-blog-ssr/tsconfig.app.json
+++ b/apps/personal-blog-ssr/tsconfig.app.json
@@ -51,6 +51,9 @@
   ],
   "references": [
     {
+      "path": "../../libs/web/articles/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/web/home/tsconfig.lib.json"
     }
   ]
