--- a/apps/personal-blog-ssr/tsconfig.json
+++ b/apps/personal-blog-ssr/tsconfig.json
@@ -3,6 +3,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/web/articles"
+    },
+    {
       "path": "../../libs/web/home"
     },
     {
