add static articles lib

--- a/libs/web/articles/tsconfig.json
+++ b/libs/web/articles/tsconfig.json
@@ -3,6 +3,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../static/articles"
+    },
+    {
       "path": "../shared/ui"
     },
     {
