--- a/libs/web/articles/tsconfig.lib.json
+++ b/libs/web/articles/tsconfig.lib.json
@@ -42,6 +42,9 @@
   "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
   "references": [
     {
+      "path": "../../static/articles/tsconfig.lib.json"
+    },
+    {
       "path": "../shared/ui/tsconfig.lib.json"
     },
     {
