add working static generation for articles :)

--- a/apps/personal-blog-ssr/tsconfig.app.json
+++ b/apps/personal-blog-ssr/tsconfig.app.json
@@ -51,6 +51,9 @@
   ],
   "references": [
     {
+      "path": "../../libs/static/articles/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/web/articles/tsconfig.lib.json"
     },
     {
