--- a/apps/personal-blog-ssr/tsconfig.json
+++ b/apps/personal-blog-ssr/tsconfig.json
@@ -3,7 +3,7 @@
   "include": [],
   "references": [
     {
-      "path": "../../libs/static/articles"
+      "path": "../../libs/server/articles"
     },
     {
       "path": "../../libs/web/articles"
