refactor in static articles

--- a/libs/web/home/tsconfig.json
+++ b/libs/web/home/tsconfig.json
@@ -9,7 +9,7 @@
       "path": "../navigation"
     },
     {
-      "path": "../articles"
+      "path": "../../static/articles"
     },
     {
       "path": "./tsconfig.lib.json"
