--- a/apps/personal-blog-infrastructure/tsconfig.app.json
+++ b/apps/personal-blog-infrastructure/tsconfig.app.json
@@ -5,7 +5,8 @@
     "allowJs": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "moduleResolution": "node",
+    "strict": false,
     "types": ["node"],
     "rootDir": ".",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
@@ -23,5 +24,5 @@
     "src/**/*.test.jsx",
     "src/**/*.spec.jsx"
   ],
-  "include": ["src/**/*.ts"]
+  "include": ["index.ts"]
 }
