--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # compiled output
 dist
 tmp
-/out-tsc
+**/*/out-tsc
 storybook-static
 
 # dependencies
@@ -17,6 +17,7 @@ node_modules
 *.launch
 .settings/
 *.sublime-workspace
+.cursor
 
 # IDE - VSCode
 .vscode/*
