add page title and assets to ssr app

--- a/apps/personal-blog-ssr/tsconfig.app.json
+++ b/apps/personal-blog-ssr/tsconfig.app.json
@@ -7,12 +7,15 @@
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "resolveJsonModule": true,
+    "moduleResolution": "bundler",
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "rootDir": "app",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
   "include": [
+    "react-router.config.ts",
+    "vite.config.ts",
     "app/**/*.ts",
     "app/**/*.tsx",
     "app/**/*.js",
